# crows-nest

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  cli-reference.md  design-dynamic-plugins.md
examples/: README.md
examples/plugins/: hello_world.py  text_utils.py
src/crows_nest/: __init__.py  operations.py
src/crows_nest/agents/: __init__.py  budget.py  committee.py  factory.py  hierarchy.py  llm.py  operations.py  spawning.py
src/crows_nest/api/: __init__.py  dashboard.py  ratelimit.py  server.py
src/crows_nest/cli/: __init__.py
src/crows_nest/core/: __init__.py  combinators.py  config.py  context.py  introspection.py  registry.py  runtime.py  thunk.py
src/crows_nest/dashboard/: index.html
src/crows_nest/dashboard/css/: styles.css
src/crows_nest/dashboard/js/: app.js  websocket.js
src/crows_nest/dashboard/js/components/: agent-tree.js  config-view.js  event-stream.js  overview.js  queue-monitor.js  thunk-dag.js  thunk-list.js
src/crows_nest/dashboard/js/utils/: api.js
src/crows_nest/llm/: __init__.py  adapter.py  mock.py  providers.py
src/crows_nest/memory/: __init__.py  context.py  models.py  operations.py  sqlite.py  store.py
src/crows_nest/messaging/: __init__.py  bus.py  events.py  integration.py  messages.py  operations.py  queue.py
src/crows_nest/mocks/: __init__.py  provider.py
src/crows_nest/observability/: __init__.py  logging.py  tracing.py
src/crows_nest/orchestrator/: __init__.py  executor.py  planner.py
src/crows_nest/persistence/: __init__.py  pool.py  protocol.py  sqlite.py
src/crows_nest/plugins/: __init__.py  approval.py  artifacts.py  generation.py  loader.py  loading.py  sandbox.py  storage.py  verification.py
src/crows_nest/shell/: __init__.py  operations.py  verification.py
tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_approval.py  test_benchmarks.py  test_cli.py  test_combinators.py  test_config.py  test_context.py  test_dashboard.py  test_e2e_ask.py  test_introspection.py  test_llm.py  test_memory.py  test_messaging.py  test_mocks.py  test_observability.py  test_orchestrator.py  test_persistence.py  test_plugin_artifacts.py  test_plugin_generation.py  test_plugin_loading.py  test_plugin_sandbox.py  test_plugins.py  test_pool.py  test_registry.py  test_runtime.py  test_security.py  test_shell.py  test_smoke.py  test_thunk.py  test_verification.py
tests/e2e/: conftest.py  test_dashboard.py
