[project]
name = "crows-nest"
version = "0.1.0"
description = "A thunk-based multi-agent system"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Nathan" }]
keywords = ["agents", "llm", "thunks", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "atomic-agents>=1.0.0",
    "click>=8.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "aiosqlite>=0.19.0",
    "hypothesis>=6.0.0",
    "hypothesis-jsonschema>=0.23.0",
    "anthropic>=0.79.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "bandit[toml]>=1.7.0",
    "codespell>=2.2.0",
    "pre-commit>=3.6.0",
    "httpx>=0.27.0",
]

[project.scripts]
crows-nest = "crows_nest.cli:main"
cn = "crows_nest.cli:main"

[project.urls]
Repository = "https://github.com/bitterbridge/crows-nest"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crows_nest"]

# =============================================================================
# Ruff - Linting & Formatting
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "RUF",    # ruff-specific
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "DTZ",    # flake8-datetimez
    "T20",    # flake8-print
    "LOG",    # flake8-logging
]
ignore = [
    "PLR0911",  # too many return statements - sometimes needed in schema generators
    "PLR0913",  # too many arguments - sometimes necessary
    "PLR2004",  # magic value comparison - too noisy
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # assert is fine in tests
    "ARG",      # unused arguments fine in tests (fixtures)
    "PLR2004",  # magic values fine in tests
    "S106",     # hardcoded passwords fine in tests
    "PLC0415",  # import not at top-level - fine in tests for isolation
]
"src/crows_nest/agents/llm.py" = [
    "PLC0415",  # lazy imports for optional dependencies (instructor, anthropic, openai)
]
"src/crows_nest/mocks/provider.py" = [
    "PLC0415",  # lazy imports for optional dependencies
]

[tool.ruff.lint.isort]
known-first-party = ["crows_nest"]

# =============================================================================
# Mypy - Type Checking
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false
disable_error_code = ["no-untyped-def"]

[[tool.mypy.overrides]]
module = [
    "anthropic",
    "anthropic.*",
    "atomic_agents.*",
    "hypothesis",
    "hypothesis.*",
    "hypothesis_jsonschema",
    "hypothesis_jsonschema.*",
    "instructor",
    "instructor.*",
    "openai",
    "openai.*",
    "opentelemetry.*",
    "structlog.*",
    "uvicorn.*",
]
ignore_missing_imports = true

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:hypothesis.*",
]

[tool.coverage.run]
source = ["src/crows_nest"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload",
]
fail_under = 80
show_missing = true
skip_covered = true

# =============================================================================
# Bandit - Security
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests"]
skips = [
    "B101",  # assert_used - we use assert in production for invariants
    "B110",  # try_except_pass - intentional in event listener error handling
]

# =============================================================================
# Codespell
# =============================================================================
[tool.codespell]
skip = ".git,*.lock,*.svg"
ignore-words-list = "crate,ot"
